syntax = "proto3";

option go_package = "github.com/kacpekwasny/distributed-forum/pkg/peer";

package peer;


service HelloService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}
  
message HelloRequest {
    string greeting = 1;
}
  
message HelloResponse {
    string reply = 1;
}

